fix navbar, collapse navbar once clicked

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ body{
 
 .phone:hover{
 	color: #ec971f;
+	text-decoration: none;
 	transition: all ease 0.3s;
 	-moz-transition: all ease 0.3s;
 	-webkit-transition: all ease 0.3s;
@@ -46,13 +47,13 @@ body{
 	-ms-transition: all ease 0.3s;
 }
 
-#brand{
+.brand{
 	color: #333;
 }
 
 /*Remove margin-top from h1 when the navbar is collapsed, so its centered*/
 @media (max-width: 768px) {
-	#brand{
+	.brand{
 		margin-top: 0px;
 	}
 }
@@ -96,7 +97,7 @@ body{
 #jumbotron-main.jumbotron{
 	background: url("../img/jumbotron/city.jpg") no-repeat center center;
 	background-size: cover;
-	min-height: 93vh;
+	min-height: 650px;
 }
 
 #jumbotron-whatwedo.jumbotron{
